ISSUE-0161: fixed styling issue which left submit button overlapping with link input field.

--- a/client/src/components/CreatePost/CreatePost.css
+++ b/client/src/components/CreatePost/CreatePost.css
@@ -61,7 +61,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 200px;
+    height: 270px;
     width: 800px;
     margin-bottom: 20px;
 }
@@ -85,7 +85,7 @@
 .createpost-footer{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
 }
 .createpost-field{
     width: 600px;
